# kapsel

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile.toml  README.md  TEST_HARNESS_PERFORMANCE_OPTIMIZATION.md  clippy.toml  config.toml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml  config.toml
.cargo-husky/hooks/: commit-msg  pre-commit
.config/: nextest.toml
.github/workflows/: ci.yml
.sqlx/: query-40c95e8601e9c74eb469236ce8dedac8235166d72e6685fda7aad6c8f9f1e166.json  query-567b645f507a05652325b7787bfa94230fa24eefda1d32d4dba3b839175a1408.json
benches/: webhook_benchmarks.rs  webhook_performance.rs
crates/hooky-api/: Cargo.toml
crates/hooky-api/src/: lib.rs  server.rs
crates/hooky-api/src/handlers/: ingest.rs  mod.rs
crates/hooky-core/: Cargo.toml
crates/hooky-core/src/: error.rs  lib.rs  models.rs
crates/kapsel-api/: Cargo.toml
crates/kapsel-api/src/: config.rs  crypto.rs  lib.rs  server.rs
crates/kapsel-api/src/handlers/: health.rs  ingest.rs  mod.rs
crates/kapsel-api/src/middleware/: auth.rs  mod.rs
crates/kapsel-api/src/snapshots/: kapsel_api__config__tests__config_conversions.snap  kapsel_api__config__tests__config_with_env_overrides.snap  kapsel_api__config__tests__default_config.snap  kapsel_api__config__tests__production_like_config.snap
crates/kapsel-api/tests/: auth_test.rs  health_check_test.rs  ingestion_test.rs  signature_validation_test.rs
crates/kapsel-attestation/: Cargo.toml
crates/kapsel-attestation/src/: error.rs  event_subscriber.rs  leaf.rs  lib.rs  merkle.rs  signing.rs
crates/kapsel-attestation/tests/: delivery_integration_test.rs  error_test.rs  event_test.rs  integration_test.rs  merkle_test.rs  merkle_trigger_test.rs  property_test.rs  scenario_test.rs  schema_test.rs  signing_test.rs  workflow_test.rs
crates/kapsel-core/: Cargo.toml
crates/kapsel-core/src/: error.rs  events.rs  lib.rs  models.rs  time.rs
crates/kapsel-core/src/storage/: api_keys.rs  attestation_keys.rs  delivery_attempts.rs  endpoints.rs  merkle_leaves.rs  mod.rs  signed_tree_heads.rs  tenants.rs  webhook_events.rs
crates/kapsel-core/tests/: event_test.rs  model_test.rs  property_test.rs  storage_test.rs
crates/kapsel-delivery/: Cargo.toml
crates/kapsel-delivery/src/: circuit.rs  client.rs  engine.rs  error.rs  lib.rs  retry.rs  storage.rs  worker.rs  worker_pool.rs
crates/kapsel-delivery/tests/: client_test.rs  engine_test.rs  mock_storage_test.rs  property_test.proptest-regressions  property_test.rs  retry_test.rs  webhook_test.rs  worker_test.rs
crates/kapsel-testing/: Cargo.toml  README.md
crates/kapsel-testing/proptest-regressions/: property.txt
crates/kapsel-testing/src/: attestation.rs  connection.rs  database.rs  database_helpers.rs  delivery.rs  env_core.rs  events.rs  fixtures.rs  http.rs  invariants.rs  lib.rs  property.rs  scenario.rs  snapshots.rs  time.rs  utilities.rs
crates/kapsel-testing/src/snapshots/: kapsel_testing__after_delivery.snap  kapsel_testing__after_delivery.snap.new  kapsel_testing__after_ingestion.snap  kapsel_testing__after_ingestion.snap.new  kapsel_testing__delivery_attempts.snap  kapsel_testing__empty_system_state.snap  kapsel_testing__failed_delivery_attempts.snap  kapsel_testing__post_failure_state.snap  kapsel_testing__post_ingestion_state.snap  kapsel_testing__schema_baseline.snap  kapsel_testing__schema_baseline.snap.new  kapsel_testing__tests__validated_database_schema.snap  kapsel_testing__tests__validated_retry_behavior_attempts.snap  kapsel_testing__tests__validated_retry_behavior_events.snap  kapsel_testing__tests__validated_retry_behavior_events.snap.new  kapsel_testing__tests__validated_successful_delivery_attempts.snap  kapsel_testing__tests__validated_successful_delivery_attempts.snap.new  kapsel_testing__tests__validated_successful_delivery_events.snap
crates/kapsel-testing/tests/: env_test.rs  infrastructure_test.rs  invariants_test.rs  production_engine_test.rs  profile_test.rs  scenario_test.rs  snapshots_test.rs  transaction_isolation_test.rs
crates/test-harness/: Cargo.toml  README.md
crates/test-harness/src/: database.rs  fixtures.rs  http.rs  invariants.rs  lib.rs  time.rs
docs/: ARCHITECTURE.md  ATTESTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  OVERVIEW.md  README.md  ROADMAP.md  SPECIFICATION.md  STATUS.md  STYLE.md  TESTING.md  TESTING_STRATEGY.md  TODO.md
docs/architecture/: COMPONENTS.md  PRINCIPLES.md
docs/architecture/decisions/: ADR-001-two-phase-persistence.md
docs/development/: TESTING.md
docs/plans/: 2025-10-12-foundation-to-10-of-10.md  2025-10-12-phase1-documentation-observability.md  2025-10-13-audit-findings.md  2025-10-13-design-consistency-audit.md  2025-10-13-fix-plan.md  2025-10-13-remove-sqlite-support.md  MERKLE_REFACTOR_PLAN.md  implementation-roadmap.md
docs/product/: ROADMAP.md
docs/reference/: GLOSSARY.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: json_payload_parsing.rs  signature_validation.rs  webhook_parsing.rs
migrations/: 001_initial_schema.sql  002_remove_tenant_api_key.sql  003_fix_tree_index_constraint.sql  004_align_schema_with_models.sql  99_create_template.sh  99_create_template.sql
scripts/: ci-local.sh  init-test-db.sh  inspect-database-state.sh
src/: main.rs
tests/: attestation_schema_test.rs  attestation_signing_test.rs  chaos_test.rs  delivery_attestation_integration_test.rs  delivery_attestation_test.rs  delivery_client_test.rs  e2e_test.rs  golden_sample_test.rs  health_check.rs  health_check_test.rs  merkle_service_test.rs  property_test.rs  property_tests.proptest-regressions  property_tests.rs  test_infrastructure.rs  webhook_delivery_test.rs  webhook_ingestion_test.rs  worker_cleanup_test.rs
tests/snapshots/: webhook_ingestion_test__webhook_ingestion_persists_to_database.snap  webhook_ingestion_test__webhook_ingestion_returns_200_with_event_id.snap
