[package]
name = "hooky-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core domain
hooky-core = { path = "../hooky-core" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Data types
uuid = { workspace = true }
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

[lints]
workspace = true
