[package]
name = "hooky-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Data types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# External error types
sqlx = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
