[package]
name = "kapsel-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kapsel-core = { path = "../kapsel-core" }
axum = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sha256 = "1.5"

[dev-dependencies]
kapsel-testing = { path = "../kapsel-testing" }
tower = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }

[lints]
workspace = true
