[package]
name = "kapsel-attestation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.6"  # Must match ed25519-dalek's rand_core 0.6 dependency
rs_merkle = "1.5"
sha2 = { workspace = true }
kapsel-core = { path = "../kapsel-core" }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
kapsel-testing = { path = "../kapsel-testing" }
kapsel-delivery = { path = "../kapsel-delivery" }
wiremock = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
