[package]
name = "kapsel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain models and error types for Kapsel webhook reliability service"
repository.workspace = true
readme = "README.md"
keywords = ["webhook", "reliability", "domain", "error", "types"]
categories = ["web-programming", "network-programming", "data-structures"]

[dependencies]
# Serialization
serde = { workspace = true }
bytes = { workspace = true }

# Data types
uuid = { workspace = true }
chrono = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# External error types
sqlx = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
