[package]
name = "kapsel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain models and error types for Kapsel webhook reliability service"
repository.workspace = true
readme = "README.md"
keywords = ["webhook", "reliability", "domain", "error", "types"]
categories = ["web-programming", "network-programming", "data-structures"]

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
kapsel-testing = { path = "../kapsel-testing" }

[lints]
workspace = true
