[package]
name = "kapsel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
kapsel-testing = { path = "../kapsel-testing" }

[lints]
workspace = true
