[package]
name = "kapsel-delivery"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Internal dependencies
kapsel-core = { path = "../kapsel-core" }

# Additional dependencies for delivery engine
tokio-util = { workspace = true }

[dev-dependencies]
kapsel-testing = { path = "../kapsel-testing" }
wiremock = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
