[package]
name = "kapsel-delivery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
kapsel-core = { path = "../kapsel-core" }
kapsel-attestation = { path = "../kapsel-attestation" }
tokio-util = { workspace = true }

[dev-dependencies]
kapsel-testing = { path = "../kapsel-testing" }
wiremock = { workspace = true }
proptest = { workspace = true }
http = { workspace = true }
anyhow = { workspace = true }
tokio-test = { workspace = true }


[lints]
workspace = true
