[package]
name = "kapsel-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
kapsel-core = { path = "../kapsel-core" }
kapsel-attestation = { path = "../kapsel-attestation" }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "migrate"] }
wiremock = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
insta = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
reqwest = { workspace = true }
http = "1.0"
anyhow = { workspace = true }
fslock = "0.2"
url.workspace = true
serde.workspace = true

[package.metadata.cargo-machete]
ignored = ["insta"]

[lints]
workspace = true
