[package]
name = "kapsel-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
kapsel-core = { path = "../kapsel-core" }
kapsel-attestation = { path = "../kapsel-attestation" }
kapsel-delivery = { path = "../kapsel-delivery" }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "migrate"] }
wiremock = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
insta = { workspace = true }
sha256 = "1.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
reqwest = { workspace = true }
http = "1.0"
anyhow = { workspace = true }

[lints]
workspace = true
