[package]
name = "test-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Testing infrastructure and utilities for Kapsel webhook reliability service"
repository.workspace = true
readme = "README.md"
keywords = ["testing", "webhook", "fixtures", "mocks", "harness"]
categories = ["development-tools::testing", "web-programming", "network-programming"]

[features]
default = []

[dependencies]
# Core testing infrastructure
kapsel-core = { path = "../kapsel-core" }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "migrate"] }

# Test utilities
wiremock = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Tracing for tests
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database testing - PostgreSQL via Docker

# Additional utilities
rand = { workspace = true }
proptest = { workspace = true }

# HTTP testing
reqwest = { version = "0.11", features = ["json"] }
http = "1.0"

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
